--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "serve": "^14.2.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
