--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "serve": "^14.2.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
+    "sweetalert2": "^11.11.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
