--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "g": "^2.0.1",
     "google-map-react": "^2.2.1",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
